--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1511,6 +1511,31 @@ class="ans" id="lab6">If $n$  is even, then all even values between $-n$  and $n
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+class="ans" id="lab7">
+(a) <center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/cdf.png"></th>
+</tr>
+<tr>
+<th>Plot of CDF</th>
+</tr>
+</table>
+</center>
+
+<p></p>
+(b) $P\left(X &gt; \frac 12 \right) = 1-F\left(\frac 12\right) = \frac 34.$
+<p></p>
+(c) $P(2&lt; X \leq 4) = F(4)-F(2) = \frac{1}{12}.$
+<p></p>
+(d) $P(X &lt; 3) = F(3-) = \frac{11}{12}.$
+<p></p>
+(e) $P(X=1) = F(1)-F(1-) = \frac 16.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 16:</b>&nbsp;<center>
@@ -1523,6 +1548,17 @@ class="ans" id="lab6">If $n$  is even, then all even values between $-n$  and $n
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+class="ans" id="lab8">$P(X=1) = P(X\leq 1)-P(X&lt; 1).$
+<p></p>
+Now $\{X &lt; 1\} = \lim_n \left\{X\leq 1-\frac 1n\right\}.$  Since this is an increasing limit, hence by continuity of 
+probability, we have $P(X&lt;1) = \lim_n P\left(X\leq 1-\frac 1n\right) = \lim_n F\left(1-\frac 1n\right) = F(1-).$
+<p></p>
+Hence $P(X=1) = F(1)-F(1-).$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 17:</b>&nbsp;<center>
@@ -1535,6 +1571,20 @@ class="ans" id="lab6">If $n$  is even, then all even values between $-n$  and $n
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+class="ans" id="lab9">
+Here $p$  is he says, and $p^*$  is what he believes. The meteorologist is not an honest one, and may 
+say something different from what he believes. His only aim is to maximise the expected score. 
+<p></p>
+The expected score is 
+$$p^*(1-(1-p)^2) + (1-p^*)(1-p^2).$$
+This is to be maximised wrt $p$  (with $p^*$  fixed). 
+<p></p>
+Differentiate (or think of the graph) to see that the maximising value of $p$  is $p^*.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 18:</b>&nbsp;<center>
@@ -1547,6 +1597,17 @@ class="ans" id="lab6">If $n$  is even, then all even values between $-n$  and $n
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+class="ans" id="lab10">
+Company pays the amount $A$  with probability $p.$  It pays $0$  with probability $1-p.$
+<p></p>
+So its expected payoff is $pA.$  
+<p></p>
+Suppose that it charges $B.$  Then expected profit is $B-pA.$  To keep it 10% of $A$  we need $B = (p+0.1)A.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 19:</b>&nbsp;<center>
@@ -1559,6 +1620,21 @@ class="ans" id="lab6">If $n$  is even, then all even values between $-n$  and $n
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+class="ans" id="lab11">
+(a) $E(X)$  would be larger, because when a student is selected at random, he is more likely to come from the larger
+ buses. So $E(X)$  is a weighted average of the bus sizes where the larger buses get more weight. 
+<p></p>
+But $E(Y)$  is the simple average of the bus sizes.
+<p></p>
+(b) $E(X) = \frac{40^2+33^2+25^2+50^2}{40+33+25+50}.$
+<p></p>
+$E(Y) = \frac{40+33+25+50}{4}.$
+<p></p>
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 20:</b>&nbsp;<center>
@@ -1571,6 +1647,23 @@ class="ans" id="lab6">If $n$  is even, then all even values between $-n$  and $n
 </tr>
 </table>
 </center>
+
+<p></p>
+We assume that no draw is possible. 
+<p><a
+href="javascript:hideShow('lab12')"><b>Hint:</b></a><div
+class="ans" id="lab12">
+By the pigeon hole principle, the winner will be decided by at least 2 and at most 3 games. 
+So the sample space is $\{AA, BB, ABA, BAA, BAB, ABB\}.$  The probabilities are, respectively, 
+$p^2, q^2, p^2q, p^2q, pq^2, pq^2,$ where $q=1-p.$
+<p></p>
+ If $X$  is the random variable denoting the number of
+ games played, then it takes the values, respectively, $2,2,3,3,3,3.$
+<p></p>
+So $E(X) = 2(p^2 + q^2) + 3(2p^2q + 2pq^2)  = 2(1+pq).$
+<p></p>
+This is maximised when $pq = p(1-p)$  is maximised, which is when $p=\frac 12.$
+</div></p>
 </p>
 ::<p>
 <b>EXERCISE 21:</b>&nbsp;<center>
@@ -1595,6 +1688,24 @@ class="ans" id="lab6">If $n$  is even, then all even values between $-n$  and $n
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
+class="ans" id="lab13">
+(a) Let $X_i = \left\{\begin{array}{ll}1 &\text{if }i\mbox{-th draw is white}\\ 0&\text{otherwise.}\end{array}\right.$  for $i=1,...,10.$
+<p></p>
+Then $E(X_i) = P(i$-th draw is white$)=\frac{17}{40}.$  
+<p></p>
+So $E(X) = 10\times \frac{17}{40} = \frac{17}{4}.$  
+<p></p>
+(b) Let $Y_i = \left\{\begin{array}{ll}1&\text{if }i\mbox{-th white ball is selected}\\ 0&\text{otherwise.}\end{array}\right.$  for $i=1,...,17.$
+<p></p>
+Then $E(Y_i) = P(i$-th white ball is delected$)=\frac 14.$  
+<p></p>
+So $E(X) = 17\times \frac 14 = \frac{17}{4}.$  
+<p></p>
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 23:</b>&nbsp;<center>
@@ -1649,8 +1760,8 @@ You may use some approximations in parts (c) and (d) of this problem. For instam
  $\frac nk$  groups of $k$  patients each, even if $\frac nk$  is not an integer. You
  may also differentiate w.r.t. $k.$ 
 <p><a
-href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
-class="ans" id="lab7">(a) $1-(1-p)^k.$
+href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+class="ans" id="lab14">(a) $1-(1-p)^k.$
 <p></p>
 (b) For a group of size $k$  the random variable $X$  takes the value 
 $k+1$  with probability $1-(1-p)^k$  and the value $1$  with probability $(1-p)^k.$  
@@ -1698,8 +1809,8 @@ $$-\frac{1}{k^2}-(1-p)^k\log(1-p).$$
 </center>
 
 <p><a
-href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
-class="ans" id="lab8">Let $X = $ the number of trials needed to get the first 6. 
+href="javascript:hideShow('lab15')"><b>Hint:</b></a><div
+class="ans" id="lab15">Let $X = $ the number of trials needed to get the first 6. 
 <p></p>
 Then $P(X=k) = \left(\frac 56\right)^{k-1}\frac 16$  for $k=1,2,3,....$
 <p></p>
@@ -1751,8 +1862,8 @@ Put $x=\frac 56$  to find the required expectation.
 </center>
 
 <p><a
-href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
-class="ans" id="lab9">
+href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
+class="ans" id="lab16">
 <center>
 <table width="100%">
 <tr>
