--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1718,6 +1718,19 @@ So $E(X) = 17\times \frac 14 = \frac{17}{4}.$
 </tr>
 </table>
 </center>
+<p><a
+href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+class="ans" id="lab14">
+Let $X_i$  be as given in the hint. 
+<p></p>
+Let $X = $ number of intact marriages.
+<p></p>
+Then $X = \sum_1^{100} X_i$
+<p></p>
+Now $E(X_i) = \binom{198}{50}/\binom{200}{50}=\frac{150\times149}{200\times199}.$
+<p></p>
+So $E(X) = \frac{150\times149}{2\times199}.$
+</div></p>
 </p>
 ::<p>
 <b>EXERCISE 24:</b>&nbsp;<center>
@@ -1730,6 +1743,13 @@ So $E(X) = 17\times \frac 14 = \frac{17}{4}.$
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab15')"><b>Hint:</b></a><div
+class="ans" id="lab15">
+$E(X) = \frac 52.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 25:</b>&nbsp;<center>
@@ -1742,6 +1762,16 @@ So $E(X) = 17\times \frac 14 = \frac{17}{4}.$
 </tr>
 </table>
 </center>
+Here we assume that $E(X)$  exists finitely. The inequality holds even if 
+$E(X^2)$  is not finite (with the interpretation that $\forall a\in{\mathbb R}~~\infty \geq a$.)
+<p><a
+href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
+class="ans" id="lab16">
+You may either use Jensen's inequality with the convex function $f(x)=x^2$  or the fact that $V(X)\geq 0.$
+<p></p>
+Equality if and only if $V(X)= 0$, <i>i.e.</i>, if $X$  is a degenerate random variable.
+</div></p>
+
 </p>
 
 <p></p>
@@ -1760,8 +1790,8 @@ You may use some approximations in parts (c) and (d) of this problem. For instam
  $\frac nk$  groups of $k$  patients each, even if $\frac nk$  is not an integer. You
  may also differentiate w.r.t. $k.$ 
 <p><a
-href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
-class="ans" id="lab14">(a) $1-(1-p)^k.$
+href="javascript:hideShow('lab17')"><b>Hint:</b></a><div
+class="ans" id="lab17">(a) $1-(1-p)^k.$
 <p></p>
 (b) For a group of size $k$  the random variable $X$  takes the value 
 $k+1$  with probability $1-(1-p)^k$  and the value $1$  with probability $(1-p)^k.$  
@@ -1795,6 +1825,23 @@ $$-\frac{1}{k^2}-(1-p)^k\log(1-p).$$
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab18')"><b>Hint:</b></a><div
+class="ans" id="lab18">
+Here $P(X=k) = \binom{k-1}{r-1}p^rq^{k-r}$  for $k=r,r+1,...$  where $q = 1-p.$
+<p></p>
+So 
+$$E\left(\frac rX\right) = \sum_{k=r}^\infty \binom{k-1}{r-1}p^rq^{k-r}\frac rk.$$
+Ignoring the  terms free of $k$, and massaging the rest a little, the sum  reduces to 
+$$\sum_{k=0}^\infty \frac{k(k-1)\cdots(k-r+2)}{k+1} q^k.$$
+This may be handled by repeated term by term integration and differentiation of the power series
+$$1+q+q^2+\cdots = \frac{1}{1-q}$$
+for $|q|&lt;1.$
+<p></p>
+You may like to deal with the $r=1$  case first.
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 28:</b>&nbsp;<center>
@@ -1809,8 +1856,8 @@ $$-\frac{1}{k^2}-(1-p)^k\log(1-p).$$
 </center>
 
 <p><a
-href="javascript:hideShow('lab15')"><b>Hint:</b></a><div
-class="ans" id="lab15">Let $X = $ the number of trials needed to get the first 6. 
+href="javascript:hideShow('lab19')"><b>Hint:</b></a><div
+class="ans" id="lab19">Let $X = $ the number of trials needed to get the first 6. 
 <p></p>
 Then $P(X=k) = \left(\frac 56\right)^{k-1}\frac 16$  for $k=1,2,3,....$
 <p></p>
@@ -1835,6 +1882,29 @@ Put $x=\frac 56$  to find the required expectation.
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab20')"><b>Hint:</b></a><div
+class="ans" id="lab20">
+Assuming the dice to be fair, the answer does not depend on the number 
+the gambler bets on. 
+<p></p>
+Let $X$  be the loss for unit stake on 1.
+Then
+$$X = \left\{\begin{array}{ll}
+1&\text{if }\mbox{no die shows 1}\\
+-1&\text{if }\mbox{exactly 1 die shows 1}\\
+-2&\text{if }\mbox{exactly 2 dice show 1}\\
+-3&\text{if }\mbox{all 3 dice show 1}\\
+\end{array}\right..$$
+So $P(X=1) = \left(\frac 56\right)^3$, $P(X=-1) = 3\left(\frac 16\right)\left(\frac 56\right)^2$, 
+$P(X=-2) =
+ 3\left(\frac 16\right)^2\left(\frac 56\right)$  and $P(X=-3) = \left(\frac 16\right)^3.$
+<p></p>
+Hence   
+$$E(X) = \left(\frac 16\right)^3(5^3-3\times 5^2-6\times5-3).$$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 30:</b>&nbsp;<center>
@@ -1847,6 +1917,31 @@ Put $x=\frac 56$  to find the required expectation.
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab21')"><b>Hint:</b></a><div
+class="ans" id="lab21">
+Let $T_1 = 1.$
+<p></p>
+Let $T_i = $  waiting time for the $i$-th new coupon after the $(i-1)$-th coupon has been encountered, for
+ $i=2,3,4,5.$
+<p></p>
+Consider the following example to understand the definition of $T_i$'s. Suppose that the coupons arive in the order:
+<blockquote> 
+<font color="#ff0000">3</font> 3 <font color="#ff0000">4</font> 3 <font color="#ff0000">5</font> 4 3 4 <font color="#ff0000">2</font> 3 4 5 <font color="#ff0000">1</font>.</blockquote>
+The first occurences of each type of coupon have been shown in red. They are at positions 
+$$S_1 = 1, S_2 = 3, S_3 = 5, S_4=9\mbox{ and } S_5=13.$$
+We are defining $T_i = S_i-S_{i-1}$  for $i=1,...,5$  where $S_0=0.$
+<p></p>
+Then the $T_i$'s are independent random variables. 
+<p></p>
+$T_1$  is degenerate at 1,  and for $i=2,...,5$  we have
+$$P(T_i = k) = q_i^{k-1}p_i$$  for $k\in{\mathbb N}$  where $p_i = \frac{i-1}{5}$  and $q_i = 1-p_i.$
+<p></p>
+We can easily find $E(T_i)$'s. 
+<p></p>
+The answer to the problem is $E(T_1+\cdots+T_5) = 1+E(T_2)+\cdots+E(T_5).$
+</div></p>
 
 </p>
 ::<p>
@@ -1862,8 +1957,33 @@ Put $x=\frac 56$  to find the required expectation.
 </center>
 
 <p><a
-href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
-class="ans" id="lab16">
+href="javascript:hideShow('lab22')"><b>Hint:</b></a><div
+class="ans" id="lab22">
+Let there be $n$  workers. Let $X$  be the number of working days. 
+<p></p>
+Let $X_i=\left\{\begin{array}{ll}1&\text{if }i\mbox{-th day is a working day}\\ 0&\text{otherwise.}\end{array}\right..$
+<p></p>
+Then $X = \sum_1^{365} X_i.$
+<p></p>
+Now $E(X_i) = P(i$-th day is a working day$)= \left(\frac{364}{365}\right)^n.$
+<p></p>
+So $E(X) = 365\times \left(\frac{364}{365}\right)^n.$
+<p></p>
+Hence expected number of man-days is 
+$365n\times \left(\frac{364}{365}\right)^n=f(n)$, say.
+<p></p>
+We want to maximise this wrt $n.$  
+<p></p>
+Now 
+$$\frac{f(n+1)}{f(n)} = \frac{n+1}{n}\times \frac{364}{365}.$$
+This is $&gt;/=/&lt; 1$  according as $364 &gt;/+/&lt; n.$
+<p></p>
+So the function is maximised at $n=364$  and $365.$
+</div></p>
+
+<p><a
+href="javascript:hideShow('lab23')"><b>Hint:</b></a><div
+class="ans" id="lab23">
 <center>
 <table width="100%">
 <tr>
