--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -1959,31 +1959,6 @@ The answer to the problem is $E(T_1+\cdots+T_5) = 1+E(T_2)+\cdots+E(T_5).$
 <p><a
 href="javascript:hideShow('lab22')"><b>Hint:</b></a><div
 class="ans" id="lab22">
-Let there be $n$  workers. Let $X$  be the number of working days. 
-<p></p>
-Let $X_i=\left\{\begin{array}{ll}1&\text{if }i\mbox{-th day is a working day}\\ 0&\text{otherwise.}\end{array}\right..$
-<p></p>
-Then $X = \sum_1^{365} X_i.$
-<p></p>
-Now $E(X_i) = P(i$-th day is a working day$)= \left(\frac{364}{365}\right)^n.$
-<p></p>
-So $E(X) = 365\times \left(\frac{364}{365}\right)^n.$
-<p></p>
-Hence expected number of man-days is 
-$365n\times \left(\frac{364}{365}\right)^n=f(n)$, say.
-<p></p>
-We want to maximise this wrt $n.$  
-<p></p>
-Now 
-$$\frac{f(n+1)}{f(n)} = \frac{n+1}{n}\times \frac{364}{365}.$$
-This is $&gt;/=/&lt; 1$  according as $364 &gt;/+/&lt; n.$
-<p></p>
-So the function is maximised at $n=364$  and $365.$
-</div></p>
-
-<p><a
-href="javascript:hideShow('lab23')"><b>Hint:</b></a><div
-class="ans" id="lab23">
 <center>
 <table width="100%">
 <tr>
@@ -2046,6 +2021,32 @@ Or...use the indicator trick!!!
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab23')"><b>Hint:</b></a><div
+class="ans" id="lab23">
+Let there be $n$  workers. Let $X$  be the number of working days. 
+<p></p>
+Let $X_i=\left\{\begin{array}{ll}1&\text{if }i\mbox{-th day is a working day}\\ 0&\text{otherwise.}\end{array}\right..$
+<p></p>
+Then $X = \sum_1^{365} X_i.$
+<p></p>
+Now $E(X_i) = P(i$-th day is a working day$)= \left(\frac{364}{365}\right)^n.$
+<p></p>
+So $E(X) = 365\times \left(\frac{364}{365}\right)^n.$
+<p></p>
+Hence expected number of man-days is 
+$365n\times \left(\frac{364}{365}\right)^n=f(n)$, say.
+<p></p>
+We want to maximise this wrt $n.$  
+<p></p>
+Now 
+$$\frac{f(n+1)}{f(n)} = \frac{n+1}{n}\times \frac{364}{365}.$$
+This is $&gt;/=/&lt; 1$  according as $364 &gt;/+/&lt; n.$
+<p></p>
+So the function is maximised at $n=364$  and $365.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 33:</b>&nbsp;<center>
@@ -2058,6 +2059,17 @@ Or...use the indicator trick!!!
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab24')"><b>Hint:</b></a><div
+class="ans" id="lab24">
+Let $X=$ number of cards required to be turned. 
+<p></p>
+Then $P(X=k) = q^{k-1}p$  for $k=1,2,3,...$  where $p=\frac{4}{52}$  and $q=1-p.$
+<p></p>
+So $E(X) =\sum_{k=1}^\infty k q^{k-1}p = \frac 1p  = 13.$
+</div></p>
+
 </p>
 
 <p></p>
