--- a/prob1_2024/rv2.html
+++ b/prob1_2024/rv2.html
@@ -212,8 +212,7 @@ Hence the result.
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 1:</b>&nbsp;If $E(|X|)=\infty,$  then what can you say about $E(X)?$
 <p><a
 href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
@@ -546,33 +545,67 @@ learn the proofs for CFs in the next semester.</b>
 name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 2:</b>&nbsp;A box has 6 red balls an 4 black balls. An SRSWR of
 size $n$ is selected. If $X$ is the number of red
-balls selectrd, then find PMF and $E(X).$ Also solve the
-problem in the case of SRSWOR.</p>
+balls selected, then find PMF of $X$  and $E(X).$ Also solve the
+problem in the case of SRSWOR.
+<p><a
+href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+class="ans" id="lab2">
+<u>For SRSWR:</u>  $P(X=x) = \binom{n}{x} \left(\frac{6}{10}\right)^x\left(\frac{4}{10}\right)^{n-x}$  for $x=0,1,...,n.$
+<p></p>
 
-<p>
+<u>For SRSWOR:</u>  
+$P(X=x) = \frac{\binom{6}{x} \binom{4}{n-x}}{\binom{10}{n}}$ 
+ for $x=0,1,...,n.$
+<p></p>
+By the way, this does not mean that $X$  can indeed take all the values from 0 to $n.$  For some of these values
+ the probability is zero.
+</div></p>
+
+</p>
+::<p>
 <b>EXERCISE 3:</b>&nbsp;Let $N$ be a positive integer. Let 
 $$
 f(x) = \left\{\begin{array}{ll}c 2^x &\text{if }x=1,2,...,N\\0&\text{otherwise.}\end{array}\right.
 $$
 be a PMF. Find $c.$ Find $E(X)$ and $V(X)$ if $X$ has this PMF.
+<p><a
+href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+class="ans" id="lab3">
+For $f(x)$  to be a PMF we need 
+$$f(1)+\cdots+f(N)=1.$$
+Hence 
+$$c = \frac{1}{2^N-2}.$$
+So
+$$E(X) = \sum_1^N x f(x) = c\sum_1^N x 2^x = ...$$
+Similarly, you can find $V(X).$
+</div></p>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 4:</b>&nbsp;An SRSWR of size 2 is drawn from $\{1,2,...,12\}.$
 Let $X$ be the maximum of the two numbers
-selected. Find $E(X).$</p>
+selected. Find $E(X).$
+<p><a
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+class="ans" id="lab4">
+Here $X$  can take only the values $1,2,...,12.$  
+<p></p>
+For $k\in\{1,2,...,12\}$  we have
+$$P(X\leq k) = P(X_1, X_2 \leq k) = \left(\frac{k}{12}\right)^2.$$
+So $P(X=k) = \frac{k^2-(k-1)^2}{144} = \frac{2k-1}{144}.$
+<p></p>
+Hence $E(X) = \sum_1^{12} \frac{2k^2-k}{144}=....$
+</div></p>
 
-<p>
+</p>
+::<p>
 <b>EXERCISE 5:</b>&nbsp;An SRSWR of size $n$ is selected
 from $\{1,2,...,12\}.$ Let $a_n $ be the expected
 value of the maximum of the sample. Show that $a_n \leq
 a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</p>
-
-<p>
+::<p>
 <b>EXERCISE 6:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -584,8 +617,7 @@ a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 7:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -597,8 +629,7 @@ a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 8:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -610,8 +641,7 @@ a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</p>
 </table>
 </center>
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 9:</b>&nbsp;<center>
 <table width="100%">
 <tr>
