--- a/prob1_2024/rv2.html
+++ b/prob1_2024/rv2.html
@@ -604,7 +604,24 @@ Hence $E(X) = \sum_1^{12} \frac{2k^2-k}{144}=....$
 <b>EXERCISE 5:</b>&nbsp;An SRSWR of size $n$ is selected
 from $\{1,2,...,12\}.$ Let $a_n $ be the expected
 value of the maximum of the sample. Show that $a_n \leq
-a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</p>
+a_{n+1}$ without explicily finding $a_n$ in terms of $n.$
+<p><a
+href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+class="ans" id="lab5">
+Let $X_1,...,X_{n+1}$  be an SRSWR of size $n+1$  from $\{1,...,12\}.$
+<p></p>
+Then $X_1,...,X_n$  is an SRSWR of size $n$  from $\{1,...,12\}.$
+<p></p>
+Let $U = \max\{X_1,...,x_{n+1}\}$  and $V = \max\{X_1,...,x_n\}.$
+<p></p>
+Then $U = \max\{V,X_n\} \geq V.$
+<p></p>
+So $E(U)\geq E(V).$
+<p></p>
+Hence $a_{n+1}\geq a_n,$  as required. 
+</div></p>
+
+</p>
 ::<p>
 <b>EXERCISE 6:</b>&nbsp;<center>
 <table width="100%">
@@ -616,6 +633,17 @@ a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</p>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+class="ans" id="lab6">
+$P(0\leq X\leq 40) = 1-P(|X-\mu|&gt;20)$  where $\mu=E(X)=20.$
+<p></p>
+By Chebyshev inequality $P(|X-\mu|&gt; 20)\leq \frac{V(X)}{400} = \frac{1}{20}.$
+<p></p>
+Hence $P(0\leq X\leq 40)\geq 1-\frac{1}{20} = \frac{19}{20}.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 7:</b>&nbsp;<center>
@@ -628,6 +656,26 @@ a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</p>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+class="ans" id="lab7">
+(a) By Markov inequality, $E(X)\geq 85 P(X&gt; 85).$  
+<p></p>
+So $P(X&gt; 85) \leq \frac{75}{85}.$
+<p></p>
+(b) $P(65\leq X \leq 85) = 
+P(|X-75|\leq 10) = 1- P(|X-75|&gt; 10)\geq 1-\frac{V(X)}{100} = \frac 34$  by Chebyshev.
+<p></p>
+(c) Let the answer be $n$, and class average be $\bar X.$  
+<p></p>
+Then $E(\bar X) = 75$  and $V(\bar X) = \frac{25}{n}.$  
+<p></p>
+So, by the Chebyshev inequality, $P(|\bar X-75|\geq 5) \leq \frac{25}{5^2n} = \frac 1n.  $
+<p></p>
+So we need $1-\frac 1n \geq 0.9$  or $n\geq 10.$  
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 8:</b>&nbsp;<center>
@@ -640,18 +688,21 @@ a_{n+1}$ without explicily finding $a_n$ in terms of $n.$</p>
 </tr>
 </table>
 </center>
-</p>
-::<p>
-<b>EXERCISE 9:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/rossexp4.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
+
+<p><a
+href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+class="ans" id="lab8">
+Here $P(X\leq x) = F_X(x) = F_Y\left(\frac{x-a}{b}\right) = P\left(Y\leq \frac{x-a}{b}\right) = P(a+bY\leq x).$
+<p></p>
+Since this holds for all $x\in{\mathbb R},$  hence $X$  and $a+bY$  have the same CDF.
+<p></p>
+Since $CDF$  is unique for a distribution, hence $X$  and $a+bY$  have the same distribution.
+<p></p>
+(a) $E(X) = E(a+bY) = a+bE(Y).$
+<p></p>
+(b) $V(X) = V(a+bY) = b^2 V(Y).$ 
+</div></p>
+
 </p>
 
 <hr/>
