--- a/prob1_2024/joint.html
+++ b/prob1_2024/joint.html
@@ -705,12 +705,20 @@ independent, then $V(X+Y) = V(X)+V(Y).$
 <b>EXERCISE 1:</b>&nbsp;
 If $X$ and $Y$ have finite first moments, and at least one of them  is a degenerate random variable, then show
  that $cov(X,Y)=0.$  
+<p><a
+href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+class="ans" id="lab1">
+If $X$  is degenerate, say $P(X=c)=1,$  then $\cov(X,Y) = E(XY)-E(X)E(Y) = E(xY)-cE(Y) = 0.$
+</div></p>
 </p>
 
 <p></p>
 ::<p>
 <b>EXERCISE 2:</b>&nbsp;Let $X_1,X_2,...,X_n$  be identically distributed independent random variables with $V(X_1) = \sigma^2 &lt; \infty.$  Then what is 
 $V(\overline X_n)?$  Here $\overline X_n = \frac 1n\sum_1^n X_i.$
+<p><a
+href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+class="ans" id="lab2">$V(\overline X_n) = \frac{\sigma^2}{n}.$</div></p>
 </p>
 
 <p></p>
@@ -809,6 +817,24 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+class="ans" id="lab3">
+(a) 
+Let $X$  be the number of matching pairs.
+<p></p>
+Let $X_i = \left\{\begin{array}{ll}1&\text{if }i\mbox{-th pair match}\\ 0&\text{otherwise.}\end{array}\right..$
+<p></p>
+Then $X = \sum_1^{52} X_i.$
+<p></p>
+Now, $E(X_i) = P(i$-th pair match$)=\frac{1}{52}.$
+<p></p>
+So $E(X) = 1.$
+<p></p>
+(b) 1.
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 4:</b>&nbsp;<center>
@@ -821,6 +847,19 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+Here "discrete density" means "PMF".
+<p><a
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+class="ans" id="lab4">
+We need to check that $\forall x\in{\mathbb R}~~f(x)\geq 0$  and $\sum_{x=1}^N f(x) = 1.$
+<p></p>
+Both are immediate.
+<p></p>
+The mean is $E(X)$  where $X$  has this PMF.
+<p></p>
+$E(X) = \sum_{x=1}^N x f(x) = \frac{2}{N(N+1)}\sum_{x=1}^N x^2 = \frac{2}{N(N+1)}\times\frac{N(N+1)(2N+1)}{6} = \frac{2N+1}{3}.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 5:</b>&nbsp;<center>
@@ -833,6 +872,24 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+class="ans" id="lab5">Since $P(|X-Y|\leq M)=1$,  hence $E|X-Y| \leq E(M) = M.$
+<p></p>
+Also we know that $X = Y + (X-Y)$  and so, by triangle inequality, 
+$|X| \leq |Y| + |X-Y|.$
+<p></p>
+Now $E|X|$  always exists (may be $\infty$) and $E|X|\leq E|Y| + E|X-Y| &lt;\infty,$  since $E|Y|&lt;\infty$ 
+ and $E|X-Y|\leq M.$
+<p></p>
+Hence $E(X)$  exists finitely. 
+<p></p>
+Also $|E(X)-E(Y)| = |E(X-Y)| \leq E|X-Y|$  by Jensen's inequality, since $|x|$  is a convex function. 
+<p></p>
+Hence $|E(X)-E(Y)| \leq M,$  as required.
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 6:</b>&nbsp;<center>
@@ -845,6 +902,13 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+class="ans" id="lab6">
+$E(X) = \frac N2$  and $V(X) = \frac{N(2n+1)}{6}-\frac{N^2}{4} = \frac{N^2+2N}{12}. $
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 7:</b>&nbsp;<center>
@@ -857,6 +921,20 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p></p>
+Here "density" means "PMF".
+<p><a
+href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+class="ans" id="lab7">
+We know from analysis that $\sum_1^\infty x^{-(r+2)} &lt;\infty$  since $r&gt;0.$  
+<p></p>
+Let $c = \frac{1}{\sum_1^\infty x^{-(r+2)}}.$
+<p></p>
+Then $p(x) = \left\{\begin{array}{ll}c x^{-(r+2)}&\text{if }x\in{\mathbb N}\\ 0&\text{otherwise.}\end{array}\right. $
+is a PMF with the required property. 
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 8:</b>&nbsp;<center>
@@ -869,6 +947,16 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+class="ans" id="lab8">
+$V(X^2Y) =E(X^4Y^2)-E^2(X^2Y) = E(X^4)E(Y^2)-E^2(X^2)E^2(Y),$
+since $X,Y$  are independent (and so any function of $X$  is independent of any function of $Y$). 
+<p></p>
+Now $E(X^4)E(Y^2)-E^2(X^2)E^2(Y) = E(X^4)E(Y^2) -0 = 2\times1 = 2.$ 
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 9:</b>&nbsp;<center>
@@ -881,6 +969,13 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+class="ans" id="lab9">
+$E(2X+3Y) = 2E(X)+3E(Y)$  and $V(2X+3Y) = 4V(X)+9V(Y).$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 10:</b>&nbsp;<center>
@@ -893,6 +988,23 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+class="ans" id="lab10">
+(a) Use the fact that $\sum_{k=1}^n (X_k-\overline X) = 0.$
+<p></p>
+(b) 
+$E\left(\sum (X_k-\overline X)^2\right) = E\left(\sum (X_k-\mu)^2\right) - n E(\overline X-\mu)^2. $
+<p></p>
+Now $E(X_k)=\mu$  and $E(\overline X)=\mu.$
+<p></p>
+So $E\left(\sum (X_k-\mu)^2\right) = \sum E(X_k-\mu)^2 = n\sigma^2$
+and $E(\overline X-\mu)^2 = V(\overline X) = \frac{\sigma^2}{n}. $
+<p></p>
+Hence $E\left(\sum (X_k-\overline X)^2\right) = n\sigma^2- n\times \frac{\sigma^2}{n} = (n01)\sigma^2,$  as required.
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 11:</b>&nbsp;<center>
@@ -905,6 +1017,24 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+class="ans" id="lab11">
+(a) $E(X_i) = P(i$-th box empty$) = \left(\frac{r-1}{r}\right)^n.$
+<p></p>
+(b) Let $i\neq j.$  Then $E(X_iX_j) = P(i$-th and $j$-th boxes empty$) = \left(\frac{r-2}{r}\right)^n.$
+<p></p>
+(c) $E(S) = \frac{(r-1)^n}{r^{n-1}}.$ 
+<p></p>
+(d) $V(S) = E(S^2)-E^2(S).$
+<p></p>
+Now $E(S^2) = E\left(\sum X_i\right)^2 = \sum E(X_i^2) + \sum_{i\neq j} E(X_iX_j) =\sum E(X_i) +
+ \sum_{i\neq j} E(X_iX_j) = \frac{(r-1)^n}{r^{n-1}} + r(r-1)\times\frac{(r-2)^n}{r^n}. $
+<p></p>
+Now simplify. 
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 12:</b>&nbsp;<center>
@@ -917,6 +1047,24 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab12')"><b>Hint:</b></a><div
+class="ans" id="lab12">
+(a) 1.
+<p></p>
+(b) $E(X_i^2) = E(X_i) = \frac 1n.$  Also for $i\neq j$  we have $E(X_iX_j) = \frac{1}{n(n-1)}.$
+<p></p>
+So 
+$$\begin{eqnarray*}
+V(S_n) 
+&amp; = &amp; E(S_n^2)-E^2(S_n)\\
+&amp; = &amp; E(S_n^2)-1\\
+&amp; = &amp; \sum E(X_i^2) + \sum_{i\neq j} E(X_iX_j)-1\\
+&amp; = &amp; n\times\frac 1n + n(n-1)\times \frac{1}{n(n-1)}-1 = 1.
+\end{eqnarray*}$$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 13:</b>&nbsp;<center>
@@ -929,6 +1077,20 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
+class="ans" id="lab13">
+$cor(X_1-X_2,X_2+X_3) = \frac{cov(X_1-X_2,X_2+X_3)}{\sqrt{V(X_1-X_2)\cdot V(X_2+X_3)}}.$
+<p></p>
+Now $V(X_1-X_2) = V(X_1)+V(X_2) = \sigma_1^2 + \sigma_2^2,$  since $X_1,X_2$  independent.
+<p></p>
+Similarly, $V(X_2+X_3) = \sigma_2^2+\sigma_3^2.$
+<p></p>
+Also $cov(X_1-X_2,X_2+X_3) = cov(X_1,X_2)+\cov(X_1,X_3)-cov(X_2,X_2)-cov(X_2,X_3) = -\sigma_2^2.$
+<p></p>
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 14:</b>&nbsp;<center>
@@ -941,6 +1103,13 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+class="ans" id="lab14">
+$V(X-2Y) = V(X)+4V(Y)-4cov(X,Y) = 1+8+4\times \frac 12\times \sqrt{1\times 2}.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 15:</b>&nbsp;<center>
@@ -953,6 +1122,14 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab15')"><b>Hint:</b></a><div
+class="ans" id="lab15">
+Here $U+V=2.$  Since $V=2-U$  is a linear relation with negative slope, 
+$cor(U,V)=-1.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 16:</b>&nbsp;<center>
@@ -965,6 +1142,42 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
+class="ans" id="lab16">
+The joint PMF of $(X,Y)$  is 
+<center>
+<table style="" border="1">
+
+<tr>
+<td colspan="" rowspan=""></td><td colspan="" rowspan="">$Y=1$</td><td colspan="" rowspan="">$Y=2$</td><td colspan="" rowspan="">$Y=3$</td>
+</tr>
+
+<tr>
+<td colspan="" rowspan="">$X=1$</td><td colspan="" rowspan="">$0$</td><td colspan="" rowspan="">$\frac 16$</td><td colspan="" rowspan="">$\frac 16$</td>
+</tr>
+
+<tr>
+<td colspan="" rowspan="">$X=2$</td><td colspan="" rowspan="">$\frac 16$</td><td colspan="" rowspan="">$0$</td><td colspan="" rowspan="">$\frac 16$</td>
+</tr>
+
+<tr>
+<td colspan="" rowspan="">$X=1$</td><td colspan="" rowspan="">$\frac 16$</td><td colspan="" rowspan="">$\frac 16$</td><td colspan="" rowspan="">$0$</td>
+</tr>
+
+</table>
+</center>
+So $XY$  takes the values $2,3,6$  each with probability $\frac 13.$  Hence
+$E(XY) = \frac{11}{3}.$  
+<p></p>
+Also $E(X) = E(Y) = 2$  and $E(X^2) = E(Y^2) = \frac{14}{3}.$
+<p></p>
+So $V(X)=V(Y) = \frac{14}{3}-4 = \frac 23.$  Also $cov(X,Y)=\frac{11}{3}-4=-\frac 13.$
+<p></p>
+Hence $cor(X,Y) =-\frac 12. $
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 17:</b>&nbsp;<center>
@@ -977,6 +1190,17 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab17')"><b>Hint:</b></a><div
+class="ans" id="lab17">
+(a) This is because the $i$-th trial cannot produce both 1 and 2 together!
+<p></p>
+(b) The trials are indep. So $E(I_iJ_j) = E(I_i)E(J_j) = p_ip_j.$
+<p></p>
+(c), (d), (e): SImple algebra.
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 18:</b>&nbsp;<center>
@@ -989,6 +1213,32 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab18')"><b>Hint:</b></a><div
+class="ans" id="lab18">
+(a) $E(I_i) = P(i$-th elt in sample is of type 1$)=\frac{r_1}{r}.$
+<p></p>
+SImilarly, $E(J_i) = \frac{r_2}{r}.$
+<p></p>
+(b) $E(I_iJ_j) = $ probability that the $i$-th and $j$-th elts in the sample are, repectively, of types 1
+ and 2. 
+<p></p>
+Now these two elements may be chosen in $r(r-1)$  ways in all. 
+These are all equally likely. Total number of favourable cases is $r_1r_2.$  Hence 
+the probability is $\frac{r_1r_2}{r(r-1)}.$
+<p></p>
+(c) $E(XY) = E\big[(\sum I_i)(\sum_j J_j)\big] = \sum_{i,j} E(I_iJ_j)=
+\sum_{i\neq j} E(I_iJ_j),$  since $E(I_iJ_i)=0.$  
+<p></p>
+So $E(XY) = n(n-1)\times\frac{r_1r_2}{r(r-1)}.$
+<p></p>
+Also $E(X^2) = E\left(\sum I_i\right)^2 = \sum E(I_i^2) + \sum_{i\neq j} E(I_iI_j)
+=n\times\frac{r_1}{r} + n(n-1) \times\frac{r_1(r_1-1)}{r(r-1)}.$
+<p></p>
+The rest follows using simpe algebra. 
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 19:</b>&nbsp;<center>
@@ -1001,6 +1251,23 @@ name="Problems for practice">Problems for practice</a></h1>
 </tr>
 </table>
 </center>
+
+<p></p>
+Here "density" means "PMF". Also $\mu=E(X).$
+<p><a
+href="javascript:hideShow('lab19')"><b>Hint:</b></a><div
+class="ans" id="lab19">
+By symmtry around $2$  we see that $\mu = 2.$
+<p></p>
+Also $V(X) = E(X-\mu)^2 = 0^2\times \frac{16}{18}+1^2\times \frac{2}{18} = \frac 19.$
+<p></p>
+So we are looking for $\delta$  such that $P(|X-\mu|\geq\delta) = \frac{1}{9\delta^2}.$
+<p></p>
+Now, for $\delta&gt;0,$  the LHS is either 0 or 1 (according as $\delta$  is $&gt; 1$  or not). 
+<p></p>
+So $\delta=\frac 13$  makes both sides $1.$
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 20:</b>&nbsp;<center>
@@ -1009,14 +1276,15 @@ name="Problems for practice">Problems for practice</a></h1>
 <th><img width="" src="image/jt17.png"></th>
 </tr>
 <tr>
-<th></th>
+<th>
+</th>
 </tr>
 </table>
 </center>
 
 <p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
-class="ans" id="lab1">
+href="javascript:hideShow('lab20')"><b>Hint:</b></a><div
+class="ans" id="lab20">
 Let $X=$ number of defective bolts in a random shipment. 
 <p></p>
 We want to choose $a$  such that $P(X&gt; a) &lt; 0.05.$
@@ -1045,6 +1313,31 @@ There is a theorem called the
 </tr>
 </table>
 </center>
+
+<p></p>
+A brief note about probability generating functions: If $X$  takes non-negative integer values with $p_i = P(X=i)$ 
+ for $i=0,1,2,...$ then its probability genrating function is 
+$$\Phi_X(t) = p_0 + p_1t + p_2 t^2 +\cdots.$$
+Clearly this converges absolutely for $|t|\leq 1.$   In this problem we are assuming that it converges for all $t\in{\mathbb R}.$
+<p><a
+href="javascript:hideShow('lab21')"><b>Hint:</b></a><div
+class="ans" id="lab21">
+(a) Let $Y =\left\{\begin{array}{ll}t^{x_0}&\text{if }X\leq x_0\\ 0&\text{otherwise.}\end{array}\right.. $
+<p></p>
+Then, for $t\in[0,1],$  we have $Y\leq t^X.$    (Remember that $x\mapsto t^x$  is a non-increasing function
+ for $t\in[0,1]$). 
+<p></p>
+So $E(Y)\leq E(t^X).$  Now $E(Y) = t^{x_0}P(X\leq x_0).$  
+<p></p>
+Hence the result.
+<p></p>
+(b) Let $Z =\left\{\begin{array}{ll}t^{x_0}&\text{if }X\geq x_0\\ 0&\text{otherwise.}\end{array}\right.. $
+<p></p>
+Then, for $t\geq 1,$  we have $Z \leq t^X.$  
+<p></p>
+Hence the result follows as in (a).
+</div></p>
+
 </p>
 
 <p></p>
