--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -433,19 +433,85 @@ name="Problems for practice">Problems for practice</a></h1>
 <b>EXERCISE 1:</b>&nbsp;<img width="" src="image/condist1.png" style="vertical-align:text-top;">
 <p></p>
 Here the word "density" is used to mean "PMF". 
+<p><a
+href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+class="ans" id="lab1">
+(a) Once you realise that $f_X(x) = P(X=x)$, $f_Y(y) = P(Y=y)$  and 
+$f_{Y|X}(y|x) = P(Y=y|X=x),$  the given equality is just theorem of total probability. 
+<p></p>
+(b) The RHS is $E(E(Y|X))$  and so the equality is just the tower property.
+</div></p>
+
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 2:</b>&nbsp;<img width="" src="image/condist2.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 2:</b>&nbsp;<img width="" src="image/condist2.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+class="ans" id="lab2">
+$E(S_N) = E(E(S_N|N)) = E(N\mu) = \mu E(N).$
+<p></p>
+E(S_N^2) = E(E(S_N^2|N)) = E(N\sigma^2 + N^2\mu^2  ) = \sigma^2E(N^2)+\mu^2E(N^2).
+<p></p>
+The third equality follows directly from these two.
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 3:</b>&nbsp;<img width="" src="image/condist3.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 3:</b>&nbsp;<img width="" src="image/condist3.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab3')"><b>Hint:</b></a><div
+class="ans" id="lab3">
+(a) $\frac 23.$
+<p></p>
+(b) $\frac 29.$
+<p></p>
+(c) $\frac{13}{27}.$
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 4:</b>&nbsp;<img width="" src="image/condist4.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 4:</b>&nbsp;<img width="" src="image/condist4.png" style="vertical-align:text-top;">
+<p></p>
+You might like to solve (b) first.
+<p><a
+href="javascript:hideShow('lab4')"><b>Hint:</b></a><div
+class="ans" id="lab4">
+(b) $P(X=Y) = \frac 1N.$
+<p></p>
+(a) $P(X&lt; Y) = P(Y &lt; X) $  and $P(X&lt; Y) + P(Y &lt; X) P(X=Y)=1.$
+<p></p>
+Hence $P(X&gt; Y) = \frac 12\times\left(1-\frac 19\right) = \frac 49.$
+<p></p>
+So $P(X\geq Y) = \frac 49+\frac 19=\frac 59.$
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 5:</b>&nbsp;<img width="" src="image/condist5.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 5:</b>&nbsp;<img width="" src="image/condist5.png" style="vertical-align:text-top;">
+<p></p>
+Here Exercise 14 means the last exercise (<i>i.e.</i>, Exercise 4 according to our numbering).
+<hr>
+
+<p><a
+href="javascript:hideShow('lab5')"><b>Hint:</b></a><div
+class="ans" id="lab5">
+(a) Let $U = \min(X,Y).$   Then $U$  can take values $0,...,N.$  
+<p></p>
+$P(U=k) = P(U\geq k-1)-P(U\geq k).$
+<p></p>
+Now $P(U\geq k) = P(X,Y\geq k) = P(X\geq k)P(Y\geq k) = \left(\frac{N-k+1}{N}\right)^2.$
+<p></p>
+Similarly, $P(U\geq k-1) = \left(\frac{N-k+2}{N}\right)^2.$
+<p></p>
+So $P(U=k) = \left(\frac{(N-k+2)^2-(N-k+1)^2}{N^2} = \frac{2N-2k+3}{N^2}.$
+<p></p>
+(b)  
+</div></p>
+
 </p>
 ::<p>
 <b>EXERCISE 6:</b>&nbsp;<img width="" src="image/condist6.png" style="vertical-align:text-top;"><hr>
@@ -516,8 +582,8 @@ refers to Example 2m. <a href="image/kirti1.png">Here is that example.</a>
 <p></p>
 Will the result hold in general if the $X_i$'s are not independent?
 <p><a
-href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
-class="ans" id="lab1">No, the result may not hold if the $X_i$'s have a dependence structure that is
+href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+class="ans" id="lab6">No, the result may not hold if the $X_i$'s have a dependence structure that is
  asymetric. A counterexample is as follows. 
 <p></p>
 $X_1 = $  outcome of a roll of a fair die. $X_2$  is obtained from $X_1$  by
