--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -509,7 +509,17 @@ Similarly, $P(U\geq k-1) = \left(\frac{N-k+2}{N}\right)^2.$
 <p></p>
 So $P(U=k) = \left(\frac{(N-k+2)^2-(N-k+1)^2}{N^2} = \frac{2N-2k+3}{N^2}.$
 <p></p>
-(b)  
+(b) Let $T = \max(X,Y).$   Then $T$  can take values $0,...,N.$  
+<p></p>
+$P(T=k) = P(U\leq k)-P(T\leq k-1).$
+<p></p>
+Now $P(T\leq k) = P(X,Y\leq k) = P(X\leq k)P(Y\leq k) = \left(\frac{k+1}{N}\right)^2.$
+<p></p>
+Similarly, $P(T\leq k-1) = \left(\frac{k}{N}\right)^2.$
+<p></p>
+So $P(T=k) = \left(\frac{(k+1)^2-k^2}{N^2} = \frac{2k+1}{N^2}.$
+<p></p>
+(c)   $R=|Y-X|$  can take values in 0,1,...,$N.$ 
 </div></p>
 
 </p>
