--- a/prob1_2024/indep.html
+++ b/prob1_2024/indep.html
@@ -385,9 +385,9 @@ With this natural extension, we have the following important theorem.
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
 Let $\Omega_1,\Omega_2,\Omega,P_1,P_2,P$  be as above. Then for any $A_1\subseteq \Omega_1$  and any 
-$A_2\subseteq \Omega_2$  we have $P(A_1\cap A_2)  = P(A_1)P(A_2).$
+$A_2\subseteq \Omega_2$  we have $P(A_1\times A_2)  = P_1(A_1)P_2(A_2).$
 </fieldset>
-
+The statement of this theorem had a serious flaw, which was pointed out by Bhrajishnu. The flaw has now been corrected.
 <p>
 <b><i>Proof:</i></b>
 The proof is easy if $A_1$  and $A_2$  are both finite. 
